<resources>
    <string name="app_name">AppTrail_v2</string>
    <string name="long_string_whats">Lo STARTRAIL è un tipo di fotografia in cui immortaliamo sul sensore il moto di rotazione terrestre, e quindi la macchina fotografica essendo solidale alla terra registrerà questo movimento tramite la cosiddetta “strisciata” delle stelle.
Per realizzare questo tipo di foto si scattano una sequenza di immagini a lunga esposizione per poi andarle a "fondere" in un\'unica fotografia utilizzando software di elaborazione d\'immagine.
Le stelle lasciano una traccia circolare attorno ad un punto che sembra quasi fisso: è la STELLA POLARE, infatti l’asse di rotazione terrestre passa all’incirca proprio in corrispondenza di questa stella;
questo succede solo se vi trovate a fotografare a nord dell’equatore, mentre a sud dell’equatore non vedrete la stella polare. Se invece vi trovate all’equatore vedrete le stelle lasciare una strisciata dritta e parallela le une con le altre. Riassumendo, ecco cosa otteniamo puntando la fotocamera verso:</string>
    <string name="Title_whats">COSA E\' LO STARTRAIL?</string>
    <string name="NORD">NORD</string>
    <string name="SUD">SUD</string>
    <string name="EST">EST</string>
    <string name="OVEST">OVEST</string>
    <string name="nord_string"> serie di cerchi concentrici con la Polare al centro.</string>
    <string name="est_string"> serie di linee curve con inversione di concavità.</string>
    <string name="sud_string"> serie di semi cerchi concentrici senza centro visibile</string>
    <string name="ovest_string"> serie di linee curve con inversione di concavità</string>
    <string name="NEXT">NEXT</string>
    <string name="Title_PolarStar">COME TROVARE LA STELLA POLARE NEL CIELO?</string>
    <string name="long_string_PolarStar">Il metodo più rapido e semplice è quello di usare app in grado di dirigervi alla ricerca della stellla, l\'altro metodo è quello del vero fotografo che con l\'esperienza individua nel cielo la costellazione del Grande Carro (detto anche Orsa Maggiore) e segue una piccola regola empirica per arrivare alla Polare.</string>
    <string name="Title_How">COME FARE UNA FOTO IN STILE STARTRAIL?</string>
    <string name="long_string_How1">1) Cercate nel cielo la stella polare e quindi il NORD, una volta trovata la stella polare questa andrà necessariamente inclusa nella vostra inquadratura se volete dare ancora più spettacolarità al vostro scatto: solo così otterrete uno startrail circolare.</string>
    <string name="long_string_How2">2) Molto importante è che vi rechiate in zone particolarmente buie per realizzare i vostri scatti. Dovete andare lontano dai centri abitati e in zone sgombre da fonti di illuminazione artificiali. Meglio sarebbe andare in montagna dove l’aria è anche meno umida e quindi è possibile immortalare una quantità di stelle maggiori rispetto a zone dove l’umidità crea una fastidiosa foschia, come zone vicino al mare o a laghi e corsi d’acqua; inoltre il cielo deve essere completamente libero da nuvole, anche sparse.</string>
    <string name="Title_Equipment">ATTREZZATURA CONSIGLIATA!</string>
    <string name="cavalletto">- CAVALLETTO:</string>
    <string name="intervallometro">- INTERVALLOMETRO:</string>
    <string name="linkto_cavalletto">
        <a href="https://www.amazon.it/dp/B00K0P047E/ref=cm_sw_r_cp_apa_i_DRPYX034D6V5J76H51K8">Cavalletto treppiedi con stabilità rafforzata, progettato per funzionare con obbiettivi standard e compatibile con qualsiasi dispositivo fino a 1.5Kg.</a>
    </string>
    <string name="linkto_intervallometro">
        <a href="https://www.amazon.it/dp/B01KVE777S/ref=cm_sw_r_cp_apa_i_BDRZK89NR4M1QHKQM4NS">Comando di scatto da remoto che permette di impostare il tempo di esposizione, utile per automatizzare gli scatti con un intervallo di tempo prestabilito.</a>
    </string>
    <string name="app_trial">APP TRIAL</string>
    <string name="guida">GUIDA</string>
    <string name="calcolatrice">CALCOLATRICE</string>
</resources>