<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    tools:context=".Next2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:backgroundTint="#424242">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/Title_How"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:translationY="85dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:text="@string/long_string_How1"
        android:id="@+id/textHow1">
    </TextView>

    <ImageButton
        android:id="@+id/imageButton_next"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/tertiary_text_light"
        android:onClick="next3"
        android:translationX="340dp"
        android:translationY="670dp"
        app:srcCompat="@android:drawable/ic_media_ff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/NEXT"
        android:translationY="706dp"
        android:translationX="358dp">
    </TextView>
</RelativeLayout>